Fixed top navigation spacing issues

--- a/wp-content/themes/delivering-happiness/assets/sass/global/_community.scss
+++ b/wp-content/themes/delivering-happiness/assets/sass/global/_community.scss
@@ -3,6 +3,7 @@
 // --------------------------------------------------
 
 .community {
+    margin-top: 34px;
     .hero {
         .content {
             padding: 139px 0px 105px 66px;
